fix(checkbox): Green color box not aligned properly in check box (#196)

--- a/projects/kaltura-ng/mc-theme/themes/default/scss/primeng/theme.scss
+++ b/projects/kaltura-ng/mc-theme/themes/default/scss/primeng/theme.scss
@@ -107,8 +107,6 @@ textarea.p-inputtext {
   width: 16px;
   height: 16px;
   flex: 0 0 auto;
-  border: 1px solid $kGrayscale4;
-  border-radius: 3px;
   font-size: 10px;
   position: relative;
   &.p-checkbox-disabled {
@@ -118,10 +116,12 @@ textarea.p-inputtext {
     width: 14px;
     height: 14px;
     position: absolute;
-    border: none;
+    border: 1px solid $kGrayscale4;
+    border-radius: 3px;
     flex: 0 0 auto;
     &.p-highlight {
       background-color: $kPrimary;
+      border: 1px solid $kPrimary;
       color: #ffffff;
     }
     &.p-indeterminate {
